--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <header class="header">
     <div class="container">
       <div class="header__wrapper">
-        <a href="#">
+        <a href="#main">
           <div class="logo">
             <h1 class="logo__title"><span>Mamma</span>Mia!</h1>
             <h2 class="logo__subtitle">the best homemade Italian food</h2>
@@ -66,185 +66,185 @@
 
   <div id="pages">
 
-    <div class="container">
-      <section id="main-page" class="main-content main-wrapper ">
-  
-          <div class="banners container">
-            <div class="row">
-              <div class="col-sm-6 banner">
-                <a href="#order">
-                  <div class="card mb-1 justify-content-center align-items-center">
-                    <img src="images/assets/pizza-1.jpg">
-                    <div class="card-body position-absolute">
-                      <div class="card-title">
-                        <h3 class="banner-title title-animated">Order online</h3>
-                        <p class="banner-text">Delicious deliver</p>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="col-sm-6 banner">
-                <a href="#booking">
-                  <div class="card mb-1 justify-content-center align-items-center">
-                    <img src="images/assets/pizza-2.jpg">
-                    <div class="card-body position-absolute">
-                      <div class="card-title">
-                        <h3 class="banner-title title-animated">Book a table</h3>
-                        <p class="banner-text">Nice place!</p>
-                      </div>
-                    </div>
-                  </div>  
-                </a>
-              </div>
-              <div class="col-sm-12 banner">
-                <div class="card mb-1 no-picture justify-content-center align-items-center">
+
+    <section id="main">
+      <div id="main-content" class="main-wrapper container">
+        <div class="banners container">
+          <div class="row">
+            <div class="col-sm-6 banner">
+              <a href="#order">
+                <div class="card mb-1 justify-content-center align-items-center">
+                  <img src="images/assets/pizza-1.jpg" alt="pizza">
                   <div class="card-body position-absolute">
                     <div class="card-title">
-                      <h3 class="banner-title">Opening hours:</h3>
-                      <p class="banner-subtitle">TUE-SUN, 12AM-12PM</p>
+                      <h3 class="banner-title title-animated">Order online</h3>
+                      <p class="banner-text">Delicious deliver</p>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 banner">
+              <a href="#booking">
+                <div class="card mb-1 justify-content-center align-items-center">
+                  <img src="images/assets/pizza-2.jpg" alt="table">
+                  <div class="card-body position-absolute">
+                    <div class="card-title">
+                      <h3 class="banner-title title-animated">Book a table</h3>
+                      <p class="banner-text">Nice place!</p>
                     </div>
                   </div>
                 </div>  
-              </div>
+              </a>
+            </div>
+            <div class="col-sm-12 banner">
+              <div class="card mb-1 no-picture justify-content-center align-items-center">
+                <div class="card-body position-absolute">
+                  <div class="card-title">
+                    <h3 class="banner-title">Opening hours:</h3>
+                    <p class="banner-subtitle">TUE-SUN, 12AM-12PM</p>
+                  </div>
+                </div>
+              </div>  
             </div>
           </div>
-  
-          <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="3000">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div class="container">
-                  <div class="row carousel-background">
-                    <div class="d-none d-sm-block col-md-5">
-                      <img src="images/assets/pizza-3.jpg" alt="First slide">
-                    </div>
-                    <div class="col-md-7 carousel-body">
-                      <h4>Amazing service</h4>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                      Pretium vulputate sapien nec sagittis aliquam.</p>
-                      <p class="author">- Margaret</p>
-                    </div>
+        </div>
+
+        <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="3000">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="container">
+                <div class="row carousel-background">
+                  <div class="d-none d-md-block col-md-5">
+                    <img src="images/assets/pizza-3.jpg" alt="First slide">
                   </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="container">
-                  <div class="row carousel-background">
-                    <div class="d-none d-md-block col-md-5">
-                      <img src="images/assets/pizza-2.jpg" alt="First slide">
-                    </div>
-                    <div class="col-md-7 carousel-body">
-                      <h4>Very Delicious</h4>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                      Pretium vulputate sapien nec sagittis aliquam.</p>
-                      <p class="author">- Bob</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="container">
-                  <div class="row carousel-background">
-                    <div class="d-none d-sm-block col-md-5">
-                      <img src="images/assets/pizza-3.jpg" alt="First slide">
-                    </div>
-                    <div class="col-md-7 carousel-body">
-                      <h4>Nice Place</h4>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                      Pretium vulputate sapien nec sagittis aliquam.</p>
-                      <p class="author">- Dora</p>
-                    </div>
+                  <div class="col-md-7 carousel-body">
+                    <h4>Amazing service</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Pretium vulputate sapien nec sagittis aliquam.</p>
+                    <p class="author">- Margaret</p>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-  
-          <div class="container ig-gallery">
-            <div class="row">
-              <div class="col-sm-6 col-md-4 gallery">
-                <img src="images/assets/pizza-4.jpg">
-                <div class="overlay"></div>
-                <div class="icons">
-                  <a href="#like" class="icon">
-                    <i class="fas fa-heart"></i>
-                  </a>
-                  <a href="#share" class="icon">
-                    <i class="fas fa-share-alt"></i>
-                  </a>
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 gallery">
-                <img src="images/assets/pizza-5.jpg">
-                <div class="overlay"></div>
-                <div class="icons">
-                  <a href="#like" class="icon">
-                    <i class="fas fa-heart"></i>
-                  </a>
-                  <a href="#share" class="icon">
-                    <i class="fas fa-share-alt"></i>
-                  </a>
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 gallery">
-                <img src="images/assets/pizza-6.jpg">
-                <div class="overlay"></div>
-                <div class="icons">
-                  <a href="#like" class="icon">
-                    <i class="fas fa-heart"></i>
-                  </a>
-                  <a href="#share" class="icon">
-                    <i class="fas fa-share-alt"></i>
-                  </a>
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 gallery">
-                <img src="images/assets/pizza-7.jpg">
-                <div class="overlay"></div>
-                <div class="icons">
-                  <a href="#like" class="icon">
-                    <i class="fas fa-heart"></i>
-                  </a>
-                  <a href="#share" class="icon">
-                    <i class="fas fa-share-alt"></i>
-                  </a>
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 gallery">
-                <img src="images/assets/pizza-8.jpg">
-                <div class="overlay"></div>
-                <div class="icons">
-                  <a href="#like" class="icon">
-                    <i class="fas fa-heart"></i>
-                  </a>
-                  <a href="#share" class="icon">
-                    <i class="fas fa-share-alt"></i>
-                  </a>
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 gallery">
-                <img src="images/assets/pizza-9.jpg">
-                <div class="overlay"></div>
-                <div class="icons">
-                  <a href="#like" class="icon">
-                    <i class="fas fa-heart"></i>
-                  </a>
-                  <a href="#share" class="icon">
-                    <i class="fas fa-share-alt"></i>
-                  </a>
+            <div class="carousel-item">
+              <div class="container">
+                <div class="row carousel-background">
+                  <div class="d-none d-md-block col-md-5">
+                    <img src="images/assets/pizza-2.jpg" alt="First slide">
+                  </div>
+                  <div class="col-md-7 carousel-body">
+                    <h4>Very Delicious</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Pretium vulputate sapien nec sagittis aliquam.</p>
+                    <p class="author">- Bob</p>
+                  </div>
                 </div>
               </div>
             </div>
-            <a href="#instagram">View more on instagram</a>
+            <div class="carousel-item">
+              <div class="container">
+                <div class="row carousel-background">
+                  <div class="d-none d-md-block col-md-5">
+                    <img src="images/assets/pizza-1.jpg" alt="First slide">
+                  </div>
+                  <div class="col-md-7 carousel-body">
+                    <h4>Nice Place</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Pretium vulputate sapien nec sagittis aliquam.</p>
+                    <p class="author">- Dora</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-  
-        </section>
-    </div>
+        </div>
+
+        <div class="container ig-gallery">
+          <div class="row">
+            <div class="col-sm-6 col-md-4 gallery">
+              <img src="images/assets/pizza-4.jpg" alt="apetizers">
+              <div class="overlay"></div>
+              <div class="icons">
+                <a href="#like" class="icon">
+                  <i class="fas fa-heart"></i>
+                </a>
+                <a href="#share" class="icon">
+                  <i class="fas fa-share-alt"></i>
+                </a>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4 gallery">
+              <img src="images/assets/pizza-5.jpg" alt="salad">
+              <div class="overlay"></div>
+              <div class="icons">
+                <a href="#like" class="icon">
+                  <i class="fas fa-heart"></i>
+                </a>
+                <a href="#share" class="icon">
+                  <i class="fas fa-share-alt"></i>
+                </a>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4 gallery">
+              <img src="images/assets/pizza-6.jpg" alt="new-pizza">
+              <div class="overlay"></div>
+              <div class="icons">
+                <a href="#like" class="icon">
+                  <i class="fas fa-heart"></i>
+                </a>
+                <a href="#share" class="icon">
+                  <i class="fas fa-share-alt"></i>
+                </a>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4 gallery">
+              <img src="images/assets/pizza-7.jpg" alt="opening">
+              <div class="overlay"></div>
+              <div class="icons">
+                <a href="#like" class="icon">
+                  <i class="fas fa-heart"></i>
+                </a>
+                <a href="#share" class="icon">
+                  <i class="fas fa-share-alt"></i>
+                </a>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4 gallery">
+              <img src="images/assets/pizza-8.jpg" alt="cooking">
+              <div class="overlay"></div>
+              <div class="icons">
+                <a href="#like" class="icon">
+                  <i class="fas fa-heart"></i>
+                </a>
+                <a href="#share" class="icon">
+                  <i class="fas fa-share-alt"></i>
+                </a>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4 gallery">
+              <img src="images/assets/pizza-9.jpg" alt="open">
+              <div class="overlay"></div>
+              <div class="icons">
+                <a href="#like" class="icon">
+                  <i class="fas fa-heart"></i>
+                </a>
+                <a href="#share" class="icon">
+                  <i class="fas fa-share-alt"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <a href="#instagram">View more on instagram</a>
+        </div>
+      </div>  
+    </section>
+
 
 
     <section id="order">
@@ -253,6 +253,7 @@
     <section id="booking">
       <div class="booking-wrapper container"></div>
     </section>
+
   </div>
 
   <script id="template-booking-widget" type="text/x-handlebars-template">
